--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -13,8 +13,10 @@ html::-webkit-scrollbar {
 }
 
 body {
-  overflow: visible !important;
+  overflow-x: clip;
+  overflow-y: visible;
   height: auto;
+  max-width: 100vw;
 }
 
 .project-page {
